Fix botched logic; PR 51191 from David Binderman.